<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageFlash"
                android:layout_width="match_parent"
                android:layout_height="@dimen/medbooks_250dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="@dimen/medbooks_10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.fitness.view.TextViewRegular
                    android:layout_width="match_parent"
                    android:textSize="@dimen/medbooks_12dp"
                    android:textColor="@color/grey2"
                    android:text="@string/label_about_1"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medbooks_5dp"
                    android:orientation="horizontal">
                    <com.fitness.view.TextViewRegular
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/medbooks_12dp"
                        android:textColor="@color/grey2"
                        android:text="1."
                        android:layout_marginRight="@dimen/medbooks_5dp"
                        android:layout_height="match_parent"/>
                    <com.fitness.view.TextViewRegular
                        android:layout_width="match_parent"
                        android:textSize="@dimen/medbooks_12dp"
                        android:textColor="@color/grey2"
                        android:text="@string/label_about_2"
                        android:layout_height="match_parent"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medbooks_5dp"
                    android:orientation="horizontal">
                    <com.fitness.view.TextViewRegular
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/medbooks_12dp"
                        android:textColor="@color/grey2"
                        android:text="2."
                        android:layout_marginRight="@dimen/medbooks_5dp"
                        android:layout_height="match_parent"/>
                    <com.fitness.view.TextViewRegular
                        android:layout_width="match_parent"
                        android:textSize="@dimen/medbooks_12dp"
                        android:textColor="@color/grey2"
                        android:text="@string/label_about_3"
                        android:layout_height="match_parent"/>
                </LinearLayout>
                <com.fitness.view.TextViewRegular
                    android:layout_width="match_parent"
                    android:textSize="@dimen/medbooks_12dp"
                    android:layout_marginTop="@dimen/medbooks_5dp"
                    android:textColor="@color/grey2"
                    android:text="@string/label_about_4"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">
            <com.fitness.view.TextViewRegular
                android:layout_width="match_parent"
                android:textSize="@dimen/medbooks_14dp"
                android:gravity="center|bottom"
                android:textColor="@color/grey2"
                android:text="@string/app_name"
                android:layout_height="wrap_content"/>
            <com.fitness.view.TextViewRegular
                android:layout_width="match_parent"
                android:textSize="@dimen/medbooks_14dp"
                android:gravity="center|bottom"
                android:textColor="@color/grey2"
                android:text="@string/label_versi"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="@dimen/medbooks_30dp"
                android:layout_height="@dimen/medbooks_30dp"
                android:layout_gravity="bottom|center"
                android:src="@drawable/icon_flash_fitness"/>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
