<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greywhite"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/close_x_text"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="X"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#00000000"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/alert" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@color/red_bar_status"></LinearLayout>

        <TextView
            android:id="@+id/alert_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp"
            android:gravity="center"
            android:text="@string/error_fetching_data"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greywhite"
            android:orientation="horizontal"
            android:paddingTop="1dp">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/medbooks_10dp"
                android:layout_marginLeft="@dimen/medbooks_10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/red_bar_status"
                android:textAllCaps="false"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/btn_yes"
                android:textSize="@dimen/medbooks_16dp"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/medbooks_10dp"
                android:layout_marginLeft="@dimen/medbooks_10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/red_bar_status"
                android:textAllCaps="false"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/btn_no"
                android:textSize="@dimen/medbooks_16dp"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>