<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="8dp"
                android:background="@color/greywhite">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/greywhite"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_border"
                        android:padding="@dimen/medbooks_10dp"
                        android:orientation="horizontal">
                        <com.fitness.view.TextViewBold
                            android:layout_width="wrap_content"
                            android:textSize="@dimen/medbooks_14dp"
                            android:textColor="@color/grey2"
                            android:layout_height="wrap_content"
                            android:text="@string/label_simple" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/medbooks_15dp"
                        android:paddingRight="@dimen/medbooks_15dp"
                        android:paddingBottom="@dimen/medbooks_10dp">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/listVideo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipChildren="false"
                            android:scrollbars="horizontal"
                            android:overScrollMode="never"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="8dp"
                android:background="@color/greywhite">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/greywhite"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_border"
                        android:padding="@dimen/medbooks_10dp"
                        android:orientation="horizontal">
                        <com.fitness.view.TextViewBold
                            android:layout_width="wrap_content"
                            android:textSize="@dimen/medbooks_14dp"
                            android:textColor="@color/grey2"
                            android:layout_height="wrap_content"
                            android:text="@string/label_reminder" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/medbooks_15dp"
                        android:paddingRight="@dimen/medbooks_15dp"
                        android:paddingBottom="@dimen/medbooks_10dp">
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipChildren="false"
                            android:scrollbars="horizontal"
                            android:overScrollMode="never"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="8dp"
                android:background="@color/greywhite">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/greywhite"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_border"
                        android:padding="@dimen/medbooks_10dp"
                        android:orientation="horizontal">
                        <com.fitness.view.TextViewBold
                            android:layout_width="wrap_content"
                            android:textSize="@dimen/medbooks_14dp"
                            android:textColor="@color/grey2"
                            android:layout_height="wrap_content"
                            android:text="@string/label_virtual" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/medbooks_15dp"
                        android:paddingRight="@dimen/medbooks_15dp"
                        android:paddingBottom="@dimen/medbooks_10dp">
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipChildren="false"
                            android:scrollbars="horizontal"
                            android:overScrollMode="never"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
